--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/*
+
+.centered-page {
+  @apply max-w-screen-lg mx-auto my-6
+}
+.centered-page.sm {
+  @apply w-96
+}
+
+.page-title {
+  @apply text-3xl my-6
+}
+*/
+
